packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__parse_css__tests__parse_css_complete_css_with_media_rule.snap
---
source: css_in_js_parser/src/parse_css.rs
expression: "(state, declarations)"
---
(
    ParserState {
        is_inside_string: None,
        is_inside_comment: false,
        is_inside_property_value: false,
        is_inside_at_rule: false,
        current_scopes: [],
        current_declaration: Declaration {
            property: "",
            value: "",
            scope: [],
            closed: false,
        },
        pending_css_segment: "",
    },
    [
        Declaration {
            property: "background",
            value: "url(\"https://example.com\")",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: Selector,
                },
                CssScope {
                    name: ".fancy",
                    scope_type: Selector,
                },
            ],
            closed: true,
        },
        Declaration {
            property: "color",
            value: "red",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: Selector,
                },
                CssScope {
                    name: ".fancy",
                    scope_type: Selector,
                },
                CssScope {
                    name: "@media (max-width: 600px)",
                    scope_type: AtRule,
                },
                CssScope {
                    name: ".baz",
                    scope_type: Selector,
                },
            ],
            closed: true,
        },
        Declaration {
            property: "background",
            value: "url(\"https://example.com\")",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: Selector,
                },
            ],
            closed: true,
        },
        Declaration {
            property: "padding",
            value: "0",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: Selector,
                },
                CssScope {
                    name: "body",
                    scope_type: Selector,
                },
            ],
            closed: true,
        },
    ],
)
