packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__parse_css__tests__parse_css_incomplete_css_1_ending_inside_a_double_quote_string.snap
---
source: css_in_js_parser/src/parse_css.rs
expression: "(state, declarations)"
---
(
    ParserState {
        is_inside_string: Some(
            '"',
        ),
        current_comment_state: None,
        is_inside_property_value: true,
        is_inside_at_rule: false,
        current_scopes: [
            CssScope {
                name: ".foo",
                scope_type: Selector,
            },
            CssScope {
                name: ".fancy",
                scope_type: Selector,
            },
        ],
        current_declaration: Declaration {
            property: "background",
            value: "url(\"https://example.com\n    ",
            scope: [],
            closed: false,
        },
        pending_css_segment: "background: url(\"https://example.com\n    ",
        paren_depth: 1,
    },
    [],
)
