packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__parse_css__tests__parse_css_resume_incomplete_css_ending_without_semicolon.snap
---
source: css_in_js_parser/src/parse_css.rs
expression: "(state1, state2, all_declarations)"
---
(
    ParserState {
        is_inside_string: None,
        is_inside_comment: false,
        is_inside_property_value: false,
        is_inside_at_rule: false,
        current_scopes: [
            CssScope {
                name: ".foo",
                scope_type: Selector,
            },
        ],
        current_declaration: Declaration {
            property: "",
            value: "",
            scope: [],
            closed: false,
        },
        pending_css_segment: "color: orange\n",
    },
    ParserState {
        is_inside_string: None,
        is_inside_comment: false,
        is_inside_property_value: false,
        is_inside_at_rule: false,
        current_scopes: [
            CssScope {
                name: ".foo",
                scope_type: Selector,
            },
        ],
        current_declaration: Declaration {
            property: "",
            value: "",
            scope: [],
            closed: false,
        },
        pending_css_segment: "",
    },
    [
        Declaration {
            property: "color",
            value: "orange\n",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: Selector,
                },
            ],
            closed: true,
        },
    ],
)
