packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__parse_css__tests__parse_css_starting_with_an_invalid_curly.snap
---
source: css_in_js_parser/src/parse_css.rs
assertion_line: 496
expression: "(state, declarations)"
---
(
    ParserState {
        is_inside_string: None,
        current_comment_state: None,
        is_inside_property_value: true,
        is_inside_at_rule: false,
        current_scopes: [
            CssScope {
                name: ".foo",
                scope_type: Selector,
            },
        ],
        current_declaration: Declaration {
            property: "color",
            value: "orange\n",
            scope: [],
            closed: false,
        },
        pending_css_segment: "color: orange\n",
    },
    [],
)
